--- a/.github/workflows/java-release-android.yaml
+++ b/.github/workflows/java-release-android.yaml
@@ -44,12 +44,12 @@ jobs:
         run: mkdir /opt/android-ndk-tmp && cd /opt/android-ndk-tmp && wget -q https://dl.google.com/android/repository/android-ndk-${ANDROID_NDK_VERSION}-linux-x86_64.zip && unzip -q android-ndk-${ANDROID_NDK_VERSION}-linux-x86_64.zip && mv ./android-ndk-${ANDROID_NDK_VERSION} ${ANDROID_NDK_HOME} && cd ${ANDROID_NDK_HOME} && rm -rf /opt/android-ndk-tmp
       - name: Build project using cargo
         run: cargo ndk --platform 21 --target ${{ matrix.cfg.target }} build --release
-        working-directory: zks-crypto/zks-crypto-c
+        working-directory: zksync-crypto-c
       - name: Save artifacts
         uses: actions/upload-artifact@v2
         with:
           name: zks-crypto-lib-${{ matrix.cfg.name }}
-          path: zks-crypto/zks-crypto-c/target/${{ matrix.cfg.target }}/release/libzks_crypto.so
+          path: zksync-crypto-c/target/${{ matrix.cfg.target }}/release/libzks_crypto.so
   build_and_publish:
     name: Build jar library
     runs-on: ubuntu-latest
@@ -66,12 +66,12 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: zks-crypto-lib-arm64-v8a
-          path: java/zksync-crypto/src/main/libs/arm64-v8a
+          path: src/main/libs/arm64-v8a
       - name: Load native libraries for armeabi-v7a
         uses: actions/download-artifact@v2
         with:
           name: zks-crypto-lib-armeabi-v7a
-          path: java/zksync-crypto/src/main/libs/armeabi-v7a
+          path: src/main/libs/armeabi-v7a
       - name: Set up JDK 13
         uses: actions/setup-java@v1
         with:
@@ -80,7 +80,6 @@ jobs:
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Build with Maven
-        working-directory: java/zksync-crypto
         run: mvn install -PAndroid -Dmaven.test.skip=true
         env:
           APP_VERSION: ${{ steps.get_version.outputs.APP }}
@@ -88,9 +87,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: zksync-crypto-java-dist
-          path: java/zksync-crypto/target/*.aar
+          path: target/*.aar
       - name: Publish package
-        working-directory: java/zksync-crypto
         run: mvn clean deploy -PAndroid -Dmaven.test.skip=true
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
